# deeplearningvacancy

./: README.md  pyproject.toml
demo/demoapplication/: home.py
demo/demoapplication/pages/: For_employee.py  For_employer.py
demo/models/: commands_faiss.py  faiss_for_employee.py  faiss_for_employer.py  matching.py
notebooks/: Case2_работа_с_ваканци.ipynb  cas2_work_vacncies.ipynb  dataset.ipynb
